--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,10 +16,10 @@ layout: default
     </time>
   </div>
       </section>
-<section class="pink-gradient">
+<section class="section">
 
 
-    <div class="raised less offset relative z-index2 text container" itemprop="articleBody">
+    <div class="text container" itemprop="articleBody">
       {{ content }}
       {%- include disqus_comments.html -%}
     </div>
@@ -62,7 +62,7 @@ layout: default
           {% endif %}
     </ul>
 
-  {%- endif -%}
+  {% endif %}
   </section>
   </div>
  </article>
