--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -80,7 +80,8 @@ h1 {
   margin-top: 40px;
   font-weight: 600;
   &.post-title {
-    font-size: 2.6rem;
+    font-size: 2.7rem;
+    margin-top: 3rem;
     @media (max-width: 767px) {
           font-size: 1.8rem;
           line-height: 1.3;
@@ -148,7 +149,7 @@ hr {
 }
 .half-margin {
   margin-top: 0.5rem;
-  margin-bottom: 2.6rem;
+  margin-bottom: 2.3rem;
 }
 h2.sub-header {
   margin-top: 0px;
