--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <section class="section page-hero full-height jarallax relative" style="background-image:url({{ page.image }})">
+  <section class="section page-hero jarallax relative" style="background-image:url({{ page.image }})">
   <div class="text container">
       <h1 class="post-title no-margin-bottom {% if page.inverted-header == true%}inverted{% endif %}" itemprop="name headline">{{ page.title | escape }}</h1>
       <time class="post-info" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
