--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -84,7 +84,8 @@ h1 {
     margin-top: 3rem;
     @media (max-width: 767px) {
           font-size: 1.8rem;
-          line-height: 1.3;
+          line-height: 0;
+          padding-bottom: 1rem;
     }
   }
 }
@@ -158,7 +159,7 @@ h2.sub-header {
 .main {
   padding-top: 72px;
   @media(max-width: 767px) {
-    padding: 0;
+    padding-top: 120px;
   }
 }
 .logo {
@@ -239,4 +240,7 @@ img {
 .z-two {
   position: relative;
   z-index: 2;
+}
+.dark {
+  color: #432c2e;
 }
