--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
         </div>
         <div class="column">
           {%- if page.title -%}
-          <h1 class="align-left">{{ page.title }}</h1>
+          <h1 class="align-left serif">{{ page.title }}</h1>
           {%- endif -%}
-          <h2 class="align-left">Freelance Lifestyle Writer</h2>
+          <h2 class="align-left sanserif">Freelance Lifestyle Writer</h2>
         </div>
       </div>
     </div>
