--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post">
     <div class="container">
       <header class="post-header">
-        <h1 class="post-title{% if page.use_dark_main == true%} inverted{% endif %}">{{ page.title | escape }}</h1>
+        <h1 class="post-title serif{% if page.use_dark_main == true%} inverted{% endif %}">{{ page.title | escape }}</h1>
       </header>
     </div>
   <div class="post-content">
