--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -131,7 +131,12 @@ a {
 .no-decoration {
   text-decoration: none;
 }
-
+.serif {
+  font-family: 'Lora', serif;
+}
+.sanserif {
+  font-family: 'Roboto', sans-serif;
+}
 .inverted {
   color: #fff9f8;
   text-shadow: 0 1px 2px rgba(0,0,0,0.3);
