--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
           {%- if page.title -%}
           <h1 class="align-left serif">{{ page.title }}</h1>
           {%- endif -%}
-          <h2 class="align-left sanserif">Freelance Lifestyle Writer</h2>
+          <h2 class="align-left serif">Freelance Lifestyle Writer</h2>
         </div>
       </div>
     </div>
