--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="tight section">
+<footer class="tight sections">
 	<div class="text container">
 		<p class="align-center">© 2021 Jersey Griggs.</p>
 		 {% include social.html %}
