--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,8 +57,8 @@ layout: default
       <p class="align-center"><a href="/portfolio/"><strong>View Portfolio</strong></a></p>
     </div>
   </section>
-  <section class="section svg-circles" id="contact">
-    <div class="text container align-center">
+  <section class="section dark-topo" id="contact">
+    <div class="text container align-center inverted">
           <h2>Contact Me</h2>
           <p>Interested in discussing a project? I'd love to hear from you! Email me at <strong>jerseygriggs.writes@gmail.com</strong>.</p>
     </div>
