--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
       {% include testimonial-slider.html %}
     </div>
   </section>
-  <section class="section">
+  <section class="section topo-map">
     <div class="container">
       <h2>Latest Published Work</h2>
       <div class="portfolio-wrap home">
