--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
           <p class="no-margin-top">Hey there! Thanks for stopping by.</p>
           <p>I’m a Maine-based freelance writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.</p>
           <p>My work has been featured in Business Insider, Condé Nast Traveler, Roadtrippers Magazine, The Discoverer, How to Be a Freelance Blogger, Travel Trivia, Trip Trivia, Outside Bozeman, The Sunrise Guide, Herbstalk, and Elephant JournaI. If you have a writing or editing project you’d like to discuss, feel free to reach out to me directly — I’d love to hear from you!</p>
-          <p>In my free time, I chronicle my adventures and write gear reviews on Honest to Good, a blog dedicated to gear reviews, adventure travel, and mindful living in Maine. Check it out to see what I’ve been up to lately!</p>
+          <p>In my free time, I chronicle my adventures on Honest to Good, a blog dedicated to gear reviews, adventure travel, and mindful living in Maine. Check it out to see what I’ve been up to lately!</p>
         </div>
       </div>
     </div>
