--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <ul>
       <li><a class="{% if page.url contains "about" %}active{% endif %}" href="/about/">About</a></li>
       <li><a class="{% if page.url contains "portfolio" %}active{% endif %}" href="/portfolio/">Portfolio</a></li>
-      <!-- <li><a class="{% if page.url contains "honest" %}active{% endif %}" href="/honest-to-good/">Honest to Good</a></li> -->
+      <li><a class="{% if page.url contains "honest" %}active{% endif %}" href="/honest-to-good/">Honest to Good</a></li>
       <li><a href="/#contact">Contact</a></li>
     </ul>
   </nav>
