--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
           {%- if page.title -%}
           <h1 class="align-left serif">{{ page.title }}</h1>
           {%- endif -%}
-          <h2 class="align-left serif">Freelance Lifestyle Writer</h2>
+          <h2 class="align-left serif">Lifestyle Journalist and Creative Fiction Writer</h2>
         </div>
       </div>
     </div>
@@ -23,9 +23,12 @@ layout: default
         </div>
         <div class="column">
           <p class="no-margin-top">Hey there! Thanks for stopping by.</p>
-          <p>I’m a Maine-based freelance writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.</p>
-          <p>My work has been featured in Business Insider, Condé Nast Traveler, Roadtrippers Magazine, The Discoverer, How to Be a Freelance Blogger, Travel Trivia, Trip Trivia, Outside Bozeman, The Sunrise Guide, Herbstalk, and Elephant JournaI. If you have a writing or editing project you’d like to discuss, feel free to reach out to me directly — I’d love to hear from you!</p>
-          <p>In my free time, I chronicle my adventures on Honest to Good, a blog dedicated to gear reviews, adventure travel, and mindful living in Maine. Check it out to see what I’ve been up to lately!</p>
+          <p>I’m a Maine-based  writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.
+          </p>
+          <p>I'm a contributor to Business Insider, Condé Nast Traveler, Newsweek, Roadtrippers Magazine, Outside Magazine, The Discoverer, and The Daily Passport, to name a few. </p>
+          <p>I also write creative fiction and poetry, and am currently seeking representation forn Dark Summer, the first installment of my Young Adult paranormal mystery series, Widow Lake.
+          </p>If you’re an agent interested in learning more, or you have a writing or editing project you'd like to discuss, feel free to reach out to me directly — I’d love to hear from you!
+
         </div>
       </div>
     </div>
