--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -209,7 +209,7 @@ article {
     font-size: 1.1rem;
   }
   &.portfolio {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin-top: 24px;
     // background-color: #fff9f8;
 
@@ -218,16 +218,31 @@ article {
     }
 
     .img-container {
-      width: 180px;
-      min-height: 140px;
-      @media(max-width: 600px) {
-        height: 72px;
-        width: 100%;
+      display: flex;
+      img {
+        object-fit: cover;
+        border-radius: .2rem 0 0 .2rem;
+        margin: 0;
       }
+      img[alt] {
+        position: relative;
+        display: inline-block;
     }
-
-    img {
-      margin: 0;
+    
+    img[alt]::after {
+        content: attr(alt);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fedbd0; /* Adjust the background color and opacity as needed */
+        color: #333; /* Adjust the text color as needed */
+        padding: 0px 8px; /* Adjust the padding as needed */
+        font-size: 14px; /* Adjust the font size as needed */
+        line-height: 1.4;
+    }
+    
     }
   }
 }
@@ -253,12 +268,32 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .card .img-container {
-  // width: 230px;
+  display: flex;
   height: 100%;
-  grid-column: 1;
-  background-color: #c1b7b4;
-  background-size: cover;
-  background-position: center center;
+  img {
+    object-fit: cover;
+    margin: 0;
+    height: 100%;
+  }
+  img[alt] {
+    position: relative;
+    display: inline-block;
+}
+
+img[alt]::after {
+    content: attr(alt);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fedbd0; /* Adjust the background color and opacity as needed */
+    color: #333; /* Adjust the text color as needed */
+    padding: 0px 8px; /* Adjust the padding as needed */
+    font-size: 14px; /* Adjust the font size as needed */
+    line-height: 1.4;
+}
+
 }
 
 .card-content {
