--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -543,7 +543,7 @@ img[alt]::after {
        padding: 32px 0;
      }
     h1 {
-      font-size: 3.76rem;
+      font-size: 5.4rem;
       margin-top: 0;
       @media (max-width: 767px) {
         font-size: 3.4rem;
@@ -551,8 +551,9 @@ img[alt]::after {
     }
 
     h2 {
-      font-size: 2.1rem;
+      font-size: 2.5rem;
       margin-bottom: 0;
+      line-height: 1.3;
       @media (max-width: 767px) {
         font-size: 1.6rem;
       }
