--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -703,9 +703,10 @@ img[alt]::after {
     }
   }
   &.greeting {
-        grid-template-columns:150px 35vw;
+        grid-template-columns:230px 35vw;
         padding: 0 0 50px 0;
-        @media(max-width: 600px) {
+        gap: .4rem;
+        @media(max-width: 768px) {
           grid-template-columns: 1fr;
         }
   }
