--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -734,6 +734,8 @@ img[alt]::after {
   display: grid;
   grid-template-columns: 1fr;
   margin-top: 1.2rem;
+  position: sticky;
+  top: 90px;
   @media(max-width: 1250px) {
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 1rem;
