--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,7 @@ layout: default
         <div class="portfolio card mix {{ content.category | remove: " "  | remove: "&" }}">
           <a target="_blank" href="{{ content.url }}">
             <div class="img-container">
-              <img src="{{ content.image }}" alt="{{ content.title }}"/>
+              <img src="{{ content.image }}" alt="{{ content.title }}" loading="lazy"/>
             </div>
             <div class="card-content">
               <h4 class="no-margin">{{ content.title }}</h4>
