--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -742,6 +742,8 @@ img[alt]::after {
   margin-top: 1.2rem;
   position: sticky;
   top: 90px;
+  max-height: 100vh;
+  overflow-y: scroll;
   @media(max-width: 1250px) {
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 1rem;
