--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -78,10 +78,9 @@
 
 footer {
   background-color: #fff9f8;
+  padding: 2rem 0 3rem 0;
 }
-article {
-  // padding-bottom: 60px;
-}
+
 
 .section {
   padding: 60px 0;
