--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -534,7 +534,7 @@ img[alt]::after {
   }
 
   .hero {
-    background-image: url("/images/sunflower.jpg");
+    background-image: url("/images/sunflower.webp");
      position: relative;
      background-position-y: top;
      background-size: cover;
