--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="home">
-  <section class="hero">
+  <section class="hero jarallax">
     <div class="container">
       <div class="filter-wrap home">
         <div class="column">
@@ -74,7 +74,7 @@ layout: default
     var mq = window.matchMedia("(min-width: 767px)");
     if (mq.matches) {
       jarallax(document.querySelectorAll('.jarallax'), {
-        speed: 1.7,
+        speed: 1.1,
         type: "scroll-opacity"
       });
     }
