--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -538,7 +538,7 @@ img[alt]::after {
      position: relative;
      background-position-y: top;
      background-size: cover;
-     background-attachment: fixed;
+    //  background-attachment: fixed;
   
      @media (max-width: 767px) {
        padding: 32px 0;
