--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,12 +18,12 @@ layout: default
     </div>
     <div class="container">
       <div class="filter-wrap greeting">
-        <div class="column">
+        <div class="column pl-0">
           <picture class="headshot">
             <img src="images/headshot-2021.jpg" alt="Jersey Griggs">
           </picture>
         </div>
-        <div class="column">
+        <div class="column py-o">
           <p class="no-margin-top">Hey there! Thanks for stopping by.</p>
           <p>I’m a Maine-based  writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.
           </p>
