--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -525,6 +525,10 @@ img[alt]::after {
 
   h2 {
     font-size: 3rem;
+
+    @media(max-width: 1024px) {
+      font-size: 1.5rem;
+    }
   }
 
   h2:first-of-type,
@@ -558,6 +562,7 @@ img[alt]::after {
       line-height: 1.3;
       @media (max-width: 767px) {
         font-size: 1.6rem;
+        margin-bottom: 2rem;
       }
     }
 
