--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -214,7 +214,7 @@ footer {
     // background-color: #fff9f8;
 
     .card-content {
-      padding: 24px 36px;
+      padding:  32px;
     }
 
     
