--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -243,7 +243,7 @@ footer {
     }
     
     img[alt]::after {
-        content: attr(alt);
+        content: 'Image Not Found';
         position: absolute;
         bottom: 0;
         left: 0;
