--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -10,9 +10,6 @@
   box-shadow: inherit;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.06), 0 4px 5px 0 rgba(0,0,0,0.06), 0 1px 10px 0 rgba(0,0,0,0.08);
   box-shadow: 0 2px 4px -1px rgba(0,0,0,0.06), 0 4px 5px 0 rgba(0,0,0,0.06), 0 1px 10px 0 rgba(0,0,0,0.08);
-  @media(max-width: 767px) {
-    flex-direction: column;
-  }
 
   a.logo {
     display: flex;
@@ -33,7 +30,7 @@
       justify-content: flex-end;
       padding: 0;
       @media(max-width: 767px) {
-        justify-content: space-between;
+        justify-content: center;
       }
       margin: 0;
       flex-wrap: wrap;
