--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@ layout: default
           <p>Interested in discussing a project? I'd love to hear from you! Email me at <strong>jerseygriggs.writes@gmail.com</strong>.</p>
     </div>
   </section>
-  <section class="section tight-padding-top zig-zag">
+  <section class="section zig-zag">
     <div class="text container">
       {% include testimonial-slider.html %}
     </div>
