--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -168,7 +168,7 @@ footer {
 }
 .card {
   background-color: rgba(255,255, 255, .5);
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.06), 0 4px 5px 0 rgba(0, 0, 0, 0.06), 0 1px 10px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
   border-radius: 3px;
   display: grid;
   grid-template-columns: 33vw;
@@ -738,7 +738,7 @@ img[alt]::after {
           background: #fedbd170;
           padding: 0.25rem;
           border: 1px solid #452c2e21;
-          box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.06), 0 4px 5px 0 rgba(0, 0, 0, 0.06), 0 1px 10px 0 rgba(0, 0, 0, 0.08);
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
         }
         @media(max-width: 768px) {
           grid-template-columns: 1fr;
