--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,14 +84,17 @@ layout: default
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-  window.addEventListener('scroll', function() {
-    var scrollPosition = window.scrollY;
-    var image = document.getElementById('lighten-image');
-    var maxScale = 1.15;
-    var scale = Math.min(1 + (scrollPosition * 0.0005), maxScale); // Adjust the scaling factor as needed
-
-    image.style.transform = 'scale(' + scale + ')';
-  });
+  // Check if the screen width is greater than or equal to a certain threshold (e.g., 768px for tablets and desktops)
+  if (window.innerWidth >= 768) {
+    window.addEventListener('scroll', function() {
+      var scrollPosition = window.scrollY;
+      var image = document.getElementById('lighten-image');
+      var maxScale = 1.2;
+      var scale = Math.min(1 + (scrollPosition * 0.0005), maxScale); // Adjust the scaling factor as needed
+  
+      image.style.transform = 'scale(' + scale + ')';
+    });
+  }
 });
 
 
