--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,8 +76,8 @@ layout: default
     var mq = window.matchMedia("(min-width: 767px)");
     if (mq.matches) {
       jarallax(document.querySelectorAll('.jarallax'), {
-        speed: 1.1,
-        type: "scroll-opacity"
+        speed: 1.15,
+        type: "scroll"
       });
     }
   </script>
@@ -89,13 +89,11 @@ document.addEventListener('DOMContentLoaded', function() {
     window.addEventListener('scroll', function() {
       var scrollPosition = window.scrollY;
       var image = document.getElementById('lighten-image');
-      var maxScale = 1.12;
-      var scale = Math.min(1 + (scrollPosition * 0.0005), maxScale); // Adjust the scaling factor as needed
+      var maxRotation = 5; // Maximum rotation angle in degrees
+      var rotation = Math.min(scrollPosition * 0.05, maxRotation); // Adjust the rotation factor as needed
   
-      image.style.transform = 'scale(' + scale + ')';
+      image.style.transform = 'rotate(' + rotation + 'deg)';
     });
   }
 });
-
-
 </script>
