--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -81,6 +81,7 @@ h1 {
   font-size: 2.44rem;
   margin-top: 40px;
   font-weight: 600;
+  letter-spacing: -0.05rem;
   &.post-title {
     font-size: 2.7rem;
     margin-top: 1.4rem;
