--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -169,7 +169,7 @@ footer {
 .card {
   background-color: rgba(255,255, 255, .5);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
-  border-radius: 3px;
+  border-radius: 3rem;
   display: grid;
   grid-template-columns: 33vw;
   transition: box-shadow .22s ease;
@@ -229,7 +229,7 @@ footer {
 
       img {
         object-fit: cover;
-        border-radius: .2rem 0 0 .2rem;
+        border-radius: 3rem 0 0 3rem;
         margin: 0;
         display: block;
         width: 100%;
