--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -565,6 +565,7 @@ img[alt]::after {
     h1 {
       font-size: 5.4rem;
       margin-top: 0;
+      letter-spacing: -0.05rem;
       @media (max-width: 767px) {
         font-size: 3.4rem;
       }
@@ -573,7 +574,9 @@ img[alt]::after {
     h2 {
       font-size: 2.5rem;
       margin-bottom: 0;
-      line-height: 1.3;
+      margin-top: 1rem;
+      line-height: 3rem;
+      letter-spacing: 0.05rem;
       @media (max-width: 767px) {
         font-size: 1.6rem;
         margin-bottom: 2rem;
@@ -745,6 +748,7 @@ img[alt]::after {
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
           width: 100%;
           transition: filter 0.3s ease;
+          border-radius: 3rem;
         }
         @media(max-width: 768px) {
           grid-template-columns: 1fr;
