--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -43,13 +43,13 @@
           display: block;
           text-decoration: none;
           transition: all 0.2s ease;
-          @media(max-width: 500px) {
+          @media(max-width: 424px) {
             font-size: 12px;
-            padding: 4px;
+            padding: .28rem;
           }
-          @media(min-width: 501px) and (max-width: 768px) {
-            padding: 6px;
-            font-size: 18px;
+          @media(min-width: 425px) and (max-width: 768px) {
+            padding: 10px;
+            font-size: 16px;
           }
 
 
