--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -507,7 +507,7 @@ img[alt]::after {
 }
 .text.container {
   margin: 0 auto;
-  max-width: 66vw;
+  max-width: 62ch;
 
   &.raised {
     &.offset {
