--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
           {%- if page.title -%}
           <h1 class="align-left serif">{{ page.title }}</h1>
           {%- endif -%}
-          <h2 class="align-left serif">Lifestyle Journalist and<br>Creative Fiction Writer</h2>
+          <h2 class="align-left serif">Freelance Lifestyle Writer</h2>
         </div>
       </div>
     </div>
@@ -27,9 +27,14 @@ layout: default
           <p class="no-margin-top">Hey there! Thanks for stopping by.</p>
           <p>I’m a Maine-based  writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.
           </p>
-          <p>I'm a contributor to Business Insider, Condé Nast Traveler, Newsweek, Roadtrippers Magazine, Outside Magazine, The Discoverer, and The Daily Passport, to name a few. </p>
-          <p>I also write creative fiction and poetry, and am currently seeking representation forn Dark Summer, the first installment of my Young Adult paranormal mystery series, Widow Lake.
-          </p>If you’re an agent interested in learning more, or you have a writing or editing project you'd like to discuss, feel free to reach out to me directly — I’d love to hear from you!
+          <p>IHey there! Thanks for stopping by.
+
+            I’m a Maine-based writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms. I also work with clients directly, specializing in copywriting, ghostwriting, and content strategy to help brands communicate effectively. 
+            
+            I'm a contributor to Business Insider, Condé Nast Traveler, Newsweek, Roadtrippers Magazine, Outside Magazine, The Discoverer, and The Daily Passport, to name a few.
+            
+            If you have a writing or editing project you'd like to discuss, feel free to reach out to me directly — I’d love to hear from you!
+            
 
         </div>
       </div>
