--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,18 +24,10 @@ layout: default
           </picture>
         </div>
         <div class="column py-o">
-          <p class="no-margin-top">Hey there! Thanks for stopping by.</p>
-          <p>I’m a Maine-based  writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms.
-          </p>
-          <p>IHey there! Thanks for stopping by.
-
-            I’m a Maine-based writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms. I also work with clients directly, specializing in copywriting, ghostwriting, and content strategy to help brands communicate effectively. 
-            
-            I'm a contributor to Business Insider, Condé Nast Traveler, Newsweek, Roadtrippers Magazine, Outside Magazine, The Discoverer, and The Daily Passport, to name a few.
-            
-            If you have a writing or editing project you'd like to discuss, feel free to reach out to me directly — I’d love to hear from you!
-            
-
+          <p lass="no-margin-top">Hey there! Thanks for stopping by.</p>
+          <p>I’m a Maine-based writer with a passion for new perspectives, interesting connections, and thoughtful words. I cover wellness, outdoor adventure, travel, and lifestyle topics on digital and print platforms. I also work with clients directly, specializing in copywriting, ghostwriting, and content strategy to help brands communicate effectively.</p> 
+          <p>I'm a contributor to Business Insider, Condé Nast Traveler, Newsweek, Roadtrippers Magazine, Outside Magazine, The Discoverer, and The Daily Passport, to name a few.</p>
+          <p>If you have a writing or editing project you'd like to discuss, feel free to reach out to me directly — I’d love to hear from you!</p>
         </div>
       </div>
     </div>
